// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalHttpLogger should capture get requests 1`] = `
Object {
  "error": null,
  "request": Object {
    "body": null,
    "headers": Object {
      "accept": "application/json, text/plain, */*",
      "host": "127.0.0.1:13000",
      "user-agent": "axios/0.19.0",
    },
    "method": "GET",
    "url": "http://127.0.0.1:13000/get?a=b",
  },
  "response": Object {
    "body": "Hello World!",
    "headers": Object {
      "connection": "close",
      "content-length": "12",
      "content-type": "text/html; charset=utf-8",
      "x-powered-by": "Express",
    },
    "status": 200,
  },
}
`;

exports[`GlobalHttpLogger should capture get requests with error response 1`] = `
Object {
  "error": null,
  "request": Object {
    "body": null,
    "headers": Object {
      "accept": "application/json, text/plain, */*",
      "host": "127.0.0.1:13000",
      "user-agent": "axios/0.19.0",
    },
    "method": "GET",
    "url": "http://127.0.0.1:13000/get/404",
  },
  "response": Object {
    "body": "{\\"error\\":\\"Not found\\"}",
    "headers": Object {
      "connection": "close",
      "content-length": "21",
      "content-type": "application/json; charset=utf-8",
      "x-powered-by": "Express",
    },
    "status": 404,
  },
}
`;

exports[`GlobalHttpLogger should capture get requests with network error 1`] = `
Object {
  "error": Object {
    "code": "ENOTFOUND",
    "message": "getaddrinfo ENOTFOUND never.existing.host.asdfgh never.existing.host.asdfgh:80",
  },
  "request": Object {
    "body": null,
    "headers": Object {
      "accept": "application/json, text/plain, */*",
      "host": "never.existing.host.asdfgh",
      "user-agent": "axios/0.19.0",
    },
    "method": "GET",
    "url": "http://never.existing.host.asdfgh/",
  },
  "response": null,
}
`;

exports[`GlobalHttpLogger should capture post requests 1`] = `
Object {
  "error": null,
  "request": Object {
    "body": "{\\"foo\\":\\"bar\\"}",
    "headers": Object {
      "accept": "application/json, text/plain, */*",
      "content-length": 13,
      "content-type": "application/json;charset=utf-8",
      "host": "127.0.0.1:13000",
      "user-agent": "axios/0.19.0",
    },
    "method": "POST",
    "url": "http://127.0.0.1:13000/post",
  },
  "response": Object {
    "body": "{\\"hello\\":\\"world\\"}",
    "headers": Object {
      "connection": "close",
      "content-length": "17",
      "content-type": "application/json; charset=utf-8",
      "x-powered-by": "Express",
    },
    "status": 200,
  },
}
`;
